--- a/src/app/pages/feature/showfeature/showfeature.page.html
+++ b/src/app/pages/feature/showfeature/showfeature.page.html
@@ -644,7 +644,7 @@
          </div>
         </ion-list>
       </div>
-      <!-- Text Answer in List View -->
+      <!-- Short Answer in List View -->
       <div class="component" *ngIf="item === 40010 && loadStatus === 'completed'">
         <ion-item lines="none" *ngIf="moment.matrix_string[i][0]">
           <div style="font-size: 14px" class="ion-text-wrap">{{moment.matrix_string[i][0]}}</div>
