--- a/src/app/pages/user/dashboard/dashboard.page.html
+++ b/src/app/pages/user/dashboard/dashboard.page.html
@@ -204,7 +204,7 @@
             <div class="empty-state" *ngIf="!(myMentors && myMentors.length) && !loading">
               <img src="assets/img/mentors.svg" alt="" />
               <a [routerLink]="['../choose', { categoryId: '5e9fe372c8bf1a622fec69d8', joinAs: 'user_list_1' }]" class="underline">
-                You don't have any mentors yet. Discover some today.</a>
+                You don't have any mentors yet. Browse templates and invite your mentors to join.</a>
             </div>
 
             <!--Mentors Mobile View-->
@@ -303,7 +303,7 @@
             <div class="empty-state" *ngIf="!(myMentees && myMentees.length) && !loading">
               <img src="assets/img/mentees.svg" alt="" />
               <a [routerLink]="['../choose', { categoryId: '5e9fe372c8bf1a622fec69d8', joinAs: 'user_list_3' }]" class="underline">
-              You don't have any mentees yet. Discover some today.</a>
+              You don't have any mentees yet. Browse templates and invite your mentees to join.</a>
             </div>
 
             <!--Mentees Mobile View-->
@@ -401,7 +401,7 @@
             <div class="empty-state" *ngIf="!(groups && groups.length) && !loading">
               <img src="assets/img/groups.svg" alt="" />
               <a [routerLink]="['../choose', { categoryId: '5e9fe35cc8bf1a622fec69d7'}]" class="underline">
-                You don't have any groups yet. Discover some today.</a>
+                You don't have any groups yet. Browse templates and invite your friends to join.</a>
             </div>
 
             <!--Group Mobile View-->
