removed console logs and found duplicate error

--- a/src/app/pages/feature/showfeature/showfeature.page.html
+++ b/src/app/pages/feature/showfeature/showfeature.page.html
@@ -37,7 +37,7 @@
           <ion-icon name="close"></ion-icon>
         </ion-button>
       </div>
-      <ion-button id="group-signin" *ngIf="!authService.token" (click)="openRegister(0, '')">
+      <ion-button id="signin" *ngIf="!authService.token" (click)="openRegister(0, '')">
         <ion-text>Sign In</ion-text>
       </ion-button>
     </ion-buttons>
